--- a/vyne-query-service/src/main/web/src/app/query-panel/taxi-viewer/sequence-diagram/sequence-diagram.component.html
+++ b/vyne-query-service/src/main/web/src/app/query-panel/taxi-viewer/sequence-diagram/sequence-diagram.component.html
@@ -1,3 +1,1 @@
-<div class="mermaid-container">
-  <mermaid [chartDef]="remoteCallMermaid"></mermaid>
-</div>
+<mermaid class="mermaid-container" [chartDef]="remoteCallMermaid"></mermaid>
